--- a/src/styles/TopNavBar.css
+++ b/src/styles/TopNavBar.css
@@ -1,26 +1,14 @@
-.App {
-    text-align: center;
+.App-header {
+    height: 55px;
+    background-color: #1D428A;
+    display: flex;
+    align-items: center;
+    margin-bottom: 70px;
+    box-shadow: -1px 0 5px 0 #1D428A;
 }
 
 .App-logo {
-    animation: App-logo-spin infinite 20s linear;
     height: 35px;
     float: left;
-    padding-left: 30px;
-}
-
-.App-header {
-    background-color: #1D428A;
-    height: 55px;
-    color: white;
-    display: flex;
-    align-items: center;
-}
-
-.App-title {
-    font-size: 1.5em;
-}
-
-.App-intro {
-    font-size: large;
+    padding-left: 40px;
 }
